FEAT: Get tasklist method by logged user implemented